logs/syntax_error_2025-04-06_15-39-53.log
[SYNTAX ERROR]   File "projects/gtk_chat_client/chat_client.py", line 1
    ```python
    ^
SyntaxError: invalid syntax
